Generación de modulo de incidentes con conexión a APIS

--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -5,7 +5,7 @@
                 <i class="{{icon}} bg-blue"></i>
                 <div class="d-inline">
                     <h5>{{titulo}}</h5>
-                    <!-- <span>{{descrpicion}}</span>-->
+                    <span>{{descrpicion}}</span>
                 </div>
             </div>
         </div>
