--- a/src/app/pages/incidentes/incidentes.component.html
+++ b/src/app/pages/incidentes/incidentes.component.html
@@ -38,7 +38,7 @@
                 <td>{{incidente.tipoIncidente.nombre}}</td>
                 <td>
                   <div class="table-actions text-left">
-                    <a data-toggle="modal" data-target="#viewLayoutItemNotificacion"><i class="ik ik-eye text-info"
+                    <a (click)="verIncidente(incidente)" data-toggle="modal" data-target="#viewLayoutItemNotificacion"><i class="ik ik-eye text-info"
                         style="cursor: pointer;" data-toggle="tooltip" data-placement="top" title="Ver Detalle"></i></a>
                   </div>
                 </td>
@@ -57,24 +57,53 @@
 
 
 
-<div class="modal fade edit-layout-modal" id="viewLayoutItemNotificacion" tabindex="-1" role="dialog" aria-labelledby="viewLayoutItemNotificacion" aria-hidden="true" style="padding-right: 0px;">
+<div class="modal fade edit-layout-modal" id="viewLayoutItemNotificacion" *ngIf="incidente!=null" tabindex="-1" role="dialog"
+  aria-labelledby="viewLayoutItemNotificacion" aria-hidden="true" style="padding-right: 0px;">
   <div class="modal-dialog" role="document">
-      <div class="modal-content">
+    <div class="modal-content">
 
-        <div class="modal-header">
-          <h5 class="modal-title">Información del Expediente </h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <div class="modal-header">
+        <h5 class="modal-title">Información del Incidente</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+            aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        </div>
+        <div class="alert alert-primary" role="alert">
+          <div class="row">
 
-          <div class="modal-footer">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <button type="button" class="btn btn-secondary m-1" data-dismiss="modal">Cerrar</button>
-                  </div>
+              <div class="col-lg-6 text-center">
+                  <small class="text-muted d-block">Fecha Incidente</small>
+                  <h6>{{incidente.fechaCreacion}}</h6>
+              </div>
+              <div class="col-lg-4 text-center">
+                  <small class="text-muted d-block">Hora Incidente</small>
+                  <h6>{{incidente.fechaCreacion}} </h6>
               </div>
           </div>
       </div>
+        <div class="row">
+            <div class="col-md-6"><img src="../img/portfolio-1.jpg" class="img-fluid" alt=""></div>
+            <div class="col-md-6"><img src="../img/portfolio-8.jpg" class="img-fluid" alt=""></div>
+        </div>
+        <div class="jumbotron pt-30 pb-30 mt-30">
+            <h2 class="mt-0">Hello, world!</h2>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        </div>
+       
+        <div class="map-box">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.886539092!2d77.49085452149588!3d12.953959988118836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C+Karnataka!5e0!3m2!1sen!2sin!4v1542005497600" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div> 
+    </div>
+
+      <div class="modal-footer">
+        <div class="row">
+          <div class="col-lg-12">
+            <button type="button" class="btn btn-secondary m-1" data-dismiss="modal">Cerrar</button>
+            <!--<button type="button"  class="btn btn-primary m-1">Editar</button>-->
+            <button type="button" class="btn btn-danger list-delete m-1">Incidente Falso</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
