--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,15 +2,15 @@
     <div class="container-fluid h-100">
         <div class="row flex-row h-100 bg-white">
             <div class="col-xl-8 col-lg-6 col-md-5 p-0 d-md-block d-lg-block d-sm-none d-none">
-                <div class="lavalite-bg" style="background-image: url('assets/img/auth/login-bg.png')">
+                <div class="lavalite-bg" style="background-image: url('assets/img/auth/login-bg.jpg')">
                     <div class="lavalite-overlay"></div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-7 my-auto p-0">
                 <div class="authentication-form mx-auto">
-                    <!-- <div class="text-center">
+                    <div class="text-center">
                         <img src="assets/img/LOGO-AMT.png" width="200px" alt="">
-                    </div>-->
+                    </div>
                     <h3>Inicie Sesión</h3>
                     <form ngNativeValidate #f="ngForm" (ngSubmit)="ingresar(f)">
                         <div class="form-group">
